--- a/index.html
+++ b/index.html
@@ -4,31 +4,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mi Portfolio</title>
+  <!--Custom CSS-->
   <link rel="stylesheet" href="./styles/style.css">
+  <!--Bootstrap CSS Link-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
+
 <body>
-  <header>
+  <!--Encabezado o header-->
+  <header class="position-fixed"> 
     <h1>Header</h1>
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="./assets/logo.png"></a> <!--Icono de la barra de navegación-->
+    <!--Logo de la barra de navegación-->
+    <a class="navbar-brand" href="#"><img src="./assets/logo2.png" alt="logo"></a> 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav"> <!--Botones de la barra de navegación-->
+      <!--Botones de la barra de navegación-->
+      <div class="navbar-nav"> 
         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
         <a class="nav-link" href="#">Sobre Mi</a>
-        <a class="nav-link" href="#">Formación</a>
-        <a class="nav-link" href="#">Skills</a>
+        <a class="nav-link" href="#">Proyectos</a>
+        <a class="nav-link" href="#">Habilidades</a>
+        <a class="nav-link" href="#">Contacto</a>
       </div>
+      <button></button>
     </div>
   </div>
   </nav>
   </header>
 
-  <footer>
+  <!--Photo of name and presentation-->
+  <section class="presentation">
+    <!--Imagen de presentación-->
+    <div class="presentation-img">
+      <img src="./assets/Foto.jpeg" alt="Foto mia">
+    </div>
+    <!--Sección de descripción en presentación-->
+    <div class="presentation-aboutme">
+      <h1>Hola!, soy Enriquez Matias</h1>
+      <p>Desarrollador web full stack en proceso</p>
+    </div>
+    <!--Sección botones a redes sociales y contacto-->
+    <div class="presentation-buttons">
+      <button class="linkedin">
+        <a class="presentation-linkedinlogo" href="https://www.linkedin.com/in/alejandro-matias-enriquez-701488232/"><img src="./assets/logolinkedin.svg" alt="linkedin"></a>
+      </button>
+      <button class="github">
+        <a class="presentation-githublogo" href="https://github.com/Matiasenriquez"><img src="./assets/logogithub.png" alt="github"></a>
+      </button>
+      <button class="contactame">¡Contactame!</button>
+    </div>
+  </section>
+
+  <!--about me Section-->
+  <section class="aboutme">
+    <p>en esta sección van mi presentación "sobre mi"</p>
+  </section>
+
+  <!--Project Section-->
+  <section class="projects">
+    <p>en esta sección van mis Proyectos</p>
+  </section>
+
+   <!--Services Section-->
+  <section class="grid-services">
+    <h2>Habilidades</h2>
+
+    <div class="services">
+      <div class="service">
+        <h3>Creación de Páginas webs</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sint earum totam repellendus vero amet necessitatibus dolore, ab non quo?</p>
+      </div>
+
+      <div class="service">
+        <h3>Mantenimiento de Páginas Webs</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur iure at commodi corporis rerum labore non id nam, minus obcaecati?</p>
+      </div>
+
+      <div class="service">
+        <h3>Creación de Aplicaciones Webs</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis voluptates iste dicta architecto et excepturi fuga non laudantium consequatur neque!</p>
+      </div>
+    </div>
+  </section>
+
+  <!--contact Section-->
+  <section class="contacto">
+    <p>En esta sección va un formulario de contacto</p>
+  </section>
+
+  <!--Pie de pagina o footer-->
+  <footer> 
     <p>Footer</p>
   </footer>
 </body>
