Add: Añadí descripción sobre mi e implemente sección skills en formato de tarjetas, utilizando grid para mostrar iconos.

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--Sección de descripción en presentación-->
     <div class="presentation-aboutme">
       <h1>Hola!, soy Enriquez Matias</h1>
-      <p>Desarrollador web full stack en proceso</p>
+      <p>Desarrollador web full stack en proceso. Busco transformar ideas en experiencias digitales con impacto, buscando aprender constantemente a travez de la práctica y la pasion por innovar.</p>
     </div>
     <!--Sección botones a redes sociales y contacto-->
     <div class="presentation-buttons">
@@ -61,7 +61,9 @@
 
   <!--about me Section-->
   <section class="aboutme">
-    <p>en esta sección van mi presentación "sobre mi"</p>
+    <h2>Sobre Mi</h2>
+    <p>Mi nombre es Enriquez Alejandro Matias, un joven Argentino oriundo de la provincia de Misiones. Soy un desarrollador web full stack en proceso y entusiasta de la tecnología. Desde que era un niño, mi pasion por los smarthphones, los video juegos y las computadoras, me llevaron a explorar el mundo del desarrollo de software y estudiar con pasion y dedicación constante todo lo relacionado al tema.</p>
+    <p>Actualmente estoy estudiando 2 diplomaturas sobre desarrollo web fullstack y disfrutando en el proceso de trabajar en proyectos junto a compañeros de estudio y en proyectos personales tales como este portfolio.</p>
   </section>
 
   <!--Project Section-->
@@ -69,27 +71,40 @@
     <p>en esta sección van mis Proyectos</p>
   </section>
 
-   <!--Services Section-->
-  <section class="grid-services">
-    <h2>Habilidades</h2>
-
-    <div class="services">
-      <div class="service">
-        <h3>Creación de Páginas webs</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium sint earum totam repellendus vero amet necessitatibus dolore, ab non quo?</p>
-      </div>
-
-      <div class="service">
-        <h3>Mantenimiento de Páginas Webs</h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Pariatur iure at commodi corporis rerum labore non id nam, minus obcaecati?</p>
-      </div>
-
-      <div class="service">
-        <h3>Creación de Aplicaciones Webs</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis voluptates iste dicta architecto et excepturi fuga non laudantium consequatur neque!</p>
+   <!--Skills Section-->
+  <section class="skills">
+  <h2>Mis Habilidades</h2>
+  <div class="cards">
+    <div class="card-frontend">
+      <h3>Frontend</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-html5.svg" alt="HTML">
+        <img src="./assets/brand-css3.svg" alt="CSS">
+        <img src="./assets/brand-javascript.svg" alt="JavaScript">
+        <img src="./assets/brand-react.svg" alt="React">
+        <img src="./assets/brand-bootstrap.svg" alt="bootstrap">
       </div>
     </div>
-  </section>
+
+    <div class="card-backend">
+      <h3>Backend</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-nodejs.svg" alt="Node.js">
+        <img src="./assets/brand-mysql.svg" alt="MySql">
+        <img src="./assets/brand-mongodb.svg" alt="MongoDB">
+        <img src="./assets/brand-python.svg" alt="Python">
+      </div>
+    </div>
+
+    <div class="card-other">
+      <h3>Herramientas</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-git.svg" alt="Git">
+        <img src="./assets/brand-github.svg" alt="GitHub">
+      </div>
+    </div>
+  </div>
+</section>
 
   <!--contact Section-->
   <section class="contacto">
