--- a/index.html
+++ b/index.html
@@ -13,27 +13,25 @@
 <body>
   <!--Encabezado o header-->
   <header class="position-fixed"> 
-    <h1>Header</h1>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <!--Logo de la barra de navegación-->
-    <a class="navbar-brand" href="#"><img src="./assets/logo2.png" alt="logo"></a> 
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <!--Botones de la barra de navegación-->
-      <div class="navbar-nav"> 
-        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-        <a class="nav-link" href="#">Sobre Mi</a>
-        <a class="nav-link" href="#">Proyectos</a>
-        <a class="nav-link" href="#">Habilidades</a>
-        <a class="nav-link" href="#">Contacto</a>
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <!--Logo de la barra de navegación-->
+        <a class="navbar-brand" href="#"><img src="./assets/logo2.png" alt="logo"></a> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <!--Botones de la barra de navegación-->
+          <div class="navbar-nav"> 
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link" href="#">Sobre Mi</a>
+            <a class="nav-link" href="#">Proyectos</a>
+            <a class="nav-link" href="#">Habilidades</a>
+            <a class="nav-link" href="#">Contacto</a>
+          </div>
+        </div>
       </div>
-      <button></button>
-    </div>
-  </div>
-  </nav>
+    </nav>
   </header>
 
   <!--Photo of name and presentation-->
@@ -108,15 +106,22 @@
 
   <!--contact Section-->
   <section class="contacto">
-    <p>En esta sección va un formulario de contacto</p>
-  </section>
+  <form action="#" method="post">
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" name="nombre" required>
+    <label for="email">Correo:</label>
+    <input type="email" id="email" name="email" required>
+    <label for="mensaje">Mensaje:</label>
+    <textarea id="mensaje" name="mensaje" required></textarea>
+    <button type="submit">Enviar</button>
+  </form>
+</section>  
+
 
   <!--Pie de pagina o footer-->
   <footer> 
-    <p>Footer</p>
+    <p>Enriquez Alejandro Matias, 2025 - Todos los derechos reservados</p>
   </footer>
-</body>
-
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
