add: actualizacion de la foto de presentacion

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="presentation">
     <!--Imagen de presentación-->
     <div class="presentation-img">
-      <img src="./assets/Foto.jpeg" alt="Foto mia">
+      <img src="./assets/foto.png" alt="Foto mia">
     </div>
     <!--Sección de descripción en presentación-->
     <div class="presentation-aboutme">
