add: actualizacion de boton linkedin

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!--Sección botones a redes sociales y contacto-->
     <div class="presentation-buttons">
       <button class="linkedin">
-        <a class="presentation-linkedinlogo" href="https://www.linkedin.com/in/alejandro-matias-enriquez-701488232/"><img src="./assets/logolinkedin.svg" alt="linkedin"></a>
+        <a class="presentation-linkedinlogo" href="https://www.linkedin.com/in/alejandro-matias-enriquez-701488232/"><img src="./assets/linkedin-logo.png" alt="linkedin"></a>
       </button>
       <button class="github">
         <a class="presentation-githublogo" href="https://github.com/Matiasenriquez"><img src="./assets/logogithub.png" alt="github"></a>
@@ -66,7 +66,26 @@
 
   <!--Project Section-->
   <section class="projects">
-    <p>en esta sección van mis Proyectos</p>
+    <div class="project">
+      <h3>Proyecto 1</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-html5.svg" alt="HTML">
+      </div>
+    </div>
+
+    <div class="project">
+      <h3>Proyecto 2</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-nodejs.svg" alt="Node.js">
+      </div>
+    </div>
+
+    <div class="project">
+      <h3>Projecto 3</h3>
+      <div class="grid-iconos-skills">
+        <img src="./assets/brand-git.svg" alt="Git">
+      </div>
+    </div>
   </section>
 
    <!--Skills Section-->
@@ -102,7 +121,7 @@
       </div>
     </div>
   </div>
-</section>
+  </section>
 
   <!--contact Section-->
   <section class="contacto">
