add: sección de Mis Proyectos

--- a/index.html
+++ b/index.html
@@ -68,22 +68,22 @@
   <section class="projects">
     <div class="project">
       <h3>Proyecto 1</h3>
-      <div class="grid-iconos-skills">
-        <img src="./assets/brand-html5.svg" alt="HTML">
+      <div class="grid-projects">
+        <img src="./assets/calculadora.png" alt="calculadora">
       </div>
     </div>
 
     <div class="project">
       <h3>Proyecto 2</h3>
-      <div class="grid-iconos-skills">
-        <img src="./assets/brand-nodejs.svg" alt="Node.js">
+      <div class="grid-projects">
+        <img src="./assets/e-commerce.jpg" alt="e-commerce">
       </div>
     </div>
 
     <div class="project">
       <h3>Projecto 3</h3>
-      <div class="grid-iconos-skills">
-        <img src="./assets/brand-git.svg" alt="Git">
+      <div class="grid-projects">
+        <img src="./assets/gestor.jpg" alt="gestor">
       </div>
     </div>
   </section>
