add: boton de volver al inicio de la pagina al final de la misma

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <!--Encabezado o header-->
-  <header class="position-fixed"> 
+  <header id="inicio" class="position-fixed"> 
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <!--Logo de la barra de navegación-->
@@ -144,5 +144,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
+<!--Boton para subir-->
+<a href="#inicio" class="boton-subir" title="Volver al inicio">⬆</a>
 </body>
 </html>
