--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
 
 <body>
   <!--Encabezado o header-->
-  <header id="inicio" class="position-fixed"> 
+  <header id="inicio"> 
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <!--Logo de la barra de navegación-->
@@ -24,10 +24,10 @@
           <!--Botones de la barra de navegación-->
           <div class="navbar-nav"> 
             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-            <a class="nav-link" href="#">Sobre Mi</a>
-            <a class="nav-link" href="#">Proyectos</a>
-            <a class="nav-link" href="#">Habilidades</a>
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#sobre-mi">Sobre Mi</a>
+            <a class="nav-link" href="#proyectos">Proyectos</a>
+            <a class="nav-link" href="#habilidades">Habilidades</a>
+            <a class="nav-link" href="#contacto">Contacto</a>
           </div>
         </div>
       </div>
@@ -38,29 +38,21 @@
   <section class="presentation">
     <!--Imagen de presentación-->
     <div class="presentation-img">
-      <img src="./assets/foto.png" alt="Foto mia">
+      <img src="./assets/foto.png" alt="Foto de Matias">
     </div>
     <!--Sección de descripción en presentación-->
     <div class="presentation-aboutme">
       <h1>Hola!, soy Enriquez Matias</h1>
-      <p>Desarrollador web full stack en proceso. Busco transformar ideas en experiencias digitales con impacto, buscando aprender constantemente a travez de la práctica y la pasion por innovar.</p>
+      <p>Desarrollador web full stack en proceso. Busco transformar ideas en experiencias digitales con impacto, buscando aprender constantemente a través de la práctica y la pasión por innovar.</p>
     </div>
-    <!--Sección botones a redes sociales y contacto-->
-    <div class="presentation-buttons">
-      <button class="linkedin">
-        <a class="presentation-linkedinlogo" href="https://www.linkedin.com/in/alejandro-matias-enriquez-701488232/"><img src="./assets/linkedin-logo.png" alt="linkedin"></a>
-      </button>
-      <button class="github">
-        <a class="presentation-githublogo" href="https://github.com/Matiasenriquez"><img src="./assets/logogithub.png" alt="github"></a>
-      </button>
-      <button class="contactame">¡Contactame!</button>
+    <button class="contactame" href=#contacto>¡Contactame!</button>
     </div>
   </section>
 
   <!--about me Section-->
-  <section class="aboutme">
+  <section class="aboutme container">
     <h2>Sobre Mi</h2>
-    <p>Mi nombre es Enriquez Alejandro Matias, un joven Argentino oriundo de la provincia de Misiones. Soy un desarrollador web full stack en proceso y entusiasta de la tecnología. Desde que era un niño, mi pasion por los smarthphones, los video juegos y las computadoras, me llevaron a explorar el mundo del desarrollo de software y estudiar con pasion y dedicación constante todo lo relacionado al tema.</p>
+    <p>Mi nombre es Enriquez Alejandro Matias, un joven Argentino oriundo de la provincia de Misiones. Soy un desarrollador web full stack en proceso y entusiasta de la tecnología. Desde que era un niño, mi pasion por los smartphones, los video juegos y las computadoras, me llevaron a explorar el mundo del desarrollo de software y estudiar con pasión y dedicación constante todo lo relacionado al tema.</p>
     <p>Actualmente estoy estudiando 2 diplomaturas sobre desarrollo web fullstack y disfrutando en el proceso de trabajar en proyectos junto a compañeros de estudio y en proyectos personales tales como este portfolio.</p>
   </section>
 
@@ -124,7 +116,8 @@
   </section>
 
   <!--contact Section-->
-  <section class="contacto">
+  <section class="contacto" id="contacto">
+    <h2>¿Te gustaría conversar? ¡Escribime!</h2>
   <form action="#" method="post">
     <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" name="nombre" required>
@@ -134,13 +127,13 @@
     <textarea id="mensaje" name="mensaje" required></textarea>
     <button type="submit">Enviar</button>
   </form>
-</section>  
+  </section>  
 
 
   <!--Pie de pagina o footer-->
-  <footer> 
-    <p>Enriquez Alejandro Matias, 2025 - Todos los derechos reservados</p>
-  </footer>
+<footer>
+  <small>&copy; Enriquez Alejandro Matias, 2025 - Todos los derechos reservados</small>
+</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
 
