add: se ajusto el tamaño de la imagen de presentación y se agrego responsive design sobre el mismo apartado

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section class="presentation">
   <!-- Descripción y botón -->
   <div class="presentation-aboutme">
-    <h1>¡Hola! Soy Enriquez Matias</h1>
+    <h1>¡Hola! Soy Enriquez Matias.</h1>
     <p>
       Desarrollador web full stack en proceso. Busco transformar ideas en experiencias digitales con impacto, aprendiendo constantemente a través de la práctica y la pasión por innovar.
     </p>
