add: se cambiaron los iconos de habilidades para que encaje mejor en los contenedores

--- a/index.html
+++ b/index.html
@@ -86,32 +86,32 @@
   <section class="skills" id="habilidades">
   <h2>Mis Habilidades</h2>
   <div class="cards">
-    <div class="card-frontend">
+    <div class="card">
       <h3>Frontend</h3>
       <div class="grid-iconos-skills">
-        <img src="./assets/brand-html5.svg" alt="HTML">
-        <img src="./assets/brand-css3.svg" alt="CSS">
-        <img src="./assets/brand-javascript.svg" alt="JavaScript">
-        <img src="./assets/brand-react.svg" alt="React">
-        <img src="./assets/brand-bootstrap.svg" alt="bootstrap">
+        <img src="./assets/html.png" alt="HTML">
+        <img src="./assets/css.png" alt="CSS">
+        <img src="./assets/javascript-logo.webp" alt="JavaScript">
+        <img src="./assets/react.webp" alt="React">
+        <img src="./assets/bootstrap.png" alt="bootstrap">
       </div>
     </div>
 
-    <div class="card-backend">
+    <div class="card">
       <h3>Backend</h3>
       <div class="grid-iconos-skills">
-        <img src="./assets/brand-nodejs.svg" alt="Node.js">
-        <img src="./assets/brand-mysql.svg" alt="MySql">
-        <img src="./assets/brand-mongodb.svg" alt="MongoDB">
-        <img src="./assets/brand-python.svg" alt="Python">
+        <img src="./assets/nodejs.png" alt="Node.js">
+        <img src="./assets/mysql.png" alt="MySql">
+        <img src="./assets/mongodb.png" alt="MongoDB">
+        <img src="./assets/python.webp" alt="Python">
       </div>
     </div>
 
-    <div class="card-other">
+    <div class="card">
       <h3>Herramientas</h3>
       <div class="grid-iconos-skills">
-        <img src="./assets/brand-git.svg" alt="Git">
-        <img src="./assets/brand-github.svg" alt="GitHub">
+        <img src="./assets/git.png" alt="Git">
+        <img src="./assets/github.png" alt="GitHub">
       </div>
     </div>
   </div>
